--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,77 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote::before, blockquote::after,
+q::before, q::after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+.skin_color {
+  color: #487922;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+body {
+  line-height: 1;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 16px;
+  background: #f3f3f3;
+  color: #666;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Oswald', sans-serif;
+}
+h1 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.6rem;
+}
+a:hover,
+a:focus,
+a:active {
+  color: #487922;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+}
+
+
+main {
+  padding-top: 20px;
+}
+
+
+.calc-res {
+  font-size: 1.2rem;
+}
+.calc-res li {
+  margin: 10px 0px;
 }
